# brickboy

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
scripts/: linecmp.py  test_rom.sh
src/: binario.c  binario.h  boot.c  boot.h  bus.c  bus.h  common.c  common.h  cpu.c  cpu.h  disasm.c  disasm.h  interrupt.h  joypad.c  joypad.h  main.c  mapper.c  mapper.h  mbc0.c  mbc0.h  mbc1.c  mbc1.h  mmu.c  mmu.h  opts.c  opts.h  ppu.c  ppu.h  rom.c  rom.h  serial.c  serial.h  shared.c  shared.h  str.c  str.h  strbuf.c  strbuf.h  timer.c  timer.h  (+2 more)
